@@ -1,3 +1,5 @@
+import me.champeau.jmh.JmhBytecodeGeneratorTask
+
 plugins {
     id("java")
     id("project-report")
@@ -8,7 +10,20 @@ group = "dev.johanness"
 version = "1.0-SNAPSHOT"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_20
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
+}
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
+}
+tasks.withType<JmhBytecodeGeneratorTask>().configureEach {
+    jvmArgs.add("--enable-preview")
 }
 
 repositories {
@@ -21,5 +36,13 @@ dependencies {
 }
 
 jmh {
-    //includes = ['ProxyCreation']
+    //includes = listOf("EnhancedForHelper")
+
+    //timeOnIteration = "2s"
+    //iterations = 5
+    //warmup = "2s"
+    //warmupIterations = 5
+    //fork = 2
+
+    jvmArgsAppend = listOf("--enable-preview")
 }
